--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <title>Maqueta | Simple</title>
     </head>
     <body>
     <header>
@@ -69,8 +70,41 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <div class="item-1" style="background-image: url(img/6a00e008d8b98f883400e5524a5b1a8834-800wi.jpg);">
-                    <div>hello</div>
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="img/lorem-ipsum.jpg" alt="...">
+                            <div class="carousel-caption">
+                                <h3>slide 2</h3>
+                                <p>caption 2</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/lorem_ipsum_by_neosh.jpg" alt="...">
+                            <div class="carousel-caption">
+                                <h3>slide 3</h3>
+                                <p>caption 3</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -79,12 +113,140 @@
                 </div>
             </div>
         </div>
+        <br>
         <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p><b style="color: #E3007C">Breaking news: </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur dignissimos distinctio earum hic laborum nisi, omni.</p>
+        <section class="col-md-8">
+            <h3>LATEST POST</h3>
+            <hr>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>&nbsp;&nbsp;&nbsp;
+                    <b>09 de julio 2018</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>&nbsp;&nbsp;&nbsp;
+                    <b>09 de julio 2018</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>&nbsp;&nbsp;&nbsp;
+                    <b>09 de julio 2018</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>&nbsp;&nbsp;&nbsp;
+                    <b>09 de julio 2018</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>&nbsp;&nbsp;&nbsp;
+                    <b>09 de julio 2018</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>&nbsp;&nbsp;&nbsp;
+                    <b>09 de julio 2018</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="col-md-4">
+            <h3>INTRESTING</h3>
+            <hr>
+        </section>
+        <section class="col-md-12 gray-bg"><br>
+            <h3 class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda beatae corporis dolorum ducimus ea, illo impedit maiores odit officia porro praesentium provident quam quibusdam quidem quos voluptas voluptatem voluptatum?</p>
+            <div class="col-md-4">
+                <div class="card-vertical card-01">
+                    <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                    <div class="card-body-vertical">
+                        <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur</h4>
+                        <b>09 de julio 2018</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                        <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card-vertical card-01">
+                    <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                    <div class="card-body-vertical">
+                        <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur</h4>
+                        <b>09 de julio 2018</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                        <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card-vertical card-01">
+                    <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                    <div class="card-body-vertical">
+                        <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur</h4>
+                        <b>09 de julio 2018</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                        <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -96,7 +258,8 @@
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+            ga('create','UA-XXXXX-Y','auto');ga('send','pageview');
+            $('.carousel').carousel();
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
