--- a/index.html
+++ b/index.html
@@ -247,6 +247,67 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <section class="col-md-12 black-one-bg">
+                <div class="col-md-4">
+                    <h3 class="text-center">ABOUT US</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto commodi dolor dolore doloribus earum, excepturi expedita fuga fugit hic ipsa iure necessitatibus nemo nostrum numquam praesentium</p>
+                    <br>
+                    <div style="padding: 0; max-width: 10%"  class="col-md-2">
+                        <i class="fa fa-map-marker fa-2x pink-letter" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-md-10">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </div>
+                    <br><br><br>
+                    <div style="padding: 0; max-width: 10%"  class="col-md-2">
+                        <i class="fa fa-cog fa-2x pink-letter" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-md-10">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </div>
+                    <br><br><br>
+                    <div style="padding: 0; max-width: 10%"  class="col-md-2">
+                        <i class="fa fa-check fa-2x pink-letter" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-md-10">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </div>
+                    <br><br><br>
+                    <hr>
+                    <div class="text-center">
+                        <span style="padding: 10px"><i class="fa fa-facebook pink-letter" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-twitter pink-letter" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-instagram pink-letter" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-github pink-letter" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-youtube pink-letter" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-pinterest pink-letter" aria-hidden="true"></i></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="text-center">POPULAR POST</h3>
+                    <hr>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="text-center">NEWSLETTER</h3>
+                    <hr>
+                </div>
+            </section>
+            <section class="col-md-12 black-two-bg">
+                <div style="padding-top: 10px" class="col-md-6">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dele consectetur elit.</p>
+                </div>
+                <div class="col-md-6">
+                    <ul class="nav nav-pills pull-right">
+                        <li><a class="font-white">test 1</a></li>
+                        <li><a class="font-white">test 2</a></li>
+                        <li><a class="font-white">test 3</a></li>
+                        <li><a class="font-white">test 4</a></li>
+                    </ul>
+                </div>
+            </section>
+        </footer>
     </div>
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
