--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
        <div class=" pink-color">
            <div class="container">
                <div class="row">
-                   <div class="col-md-8">
+                   <div class="col-md-8" id="mobile-menu">
                        <ul class="nav nav-pills">
                            <li><a class="font-white border-radious-zero"><i class="fa fa-trash" aria-hidden="true"></i> Test1</a></li>
                            <li><a class="font-white border-radious-zero"><i class="fa fa-calendar" aria-hidden="true"></i> Test2</a></li>
                        </ul>
                    </div>
-                   <div class="col-md-4">
+                   <div class="col-md-4" id="mobile-hidden">
                        <ul class="nav nav-pills pull-right" >
                            <li><a class="font-white borders-white-left">test 1</a></li>
                            <li><a class="font-white borders-white-left">test 2</a></li>
@@ -41,21 +41,21 @@
         <nav class="shadow-nav">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-12">
                         <picture>
                             <img class="img-responsive" src="img/Ural_Airlines_Уральские_Авиалинии_logo_logotype_emblem.png" alt="Image">
                         </picture>
                     </div>
-                    <div class="col-md-4">
-                        <ul class="nav nav-pills pull-right">
+                    <div class="col-md-4 col-sm-12">
+                        <ul class="nav nav-pills pull-right" id="one-menu">
                             <li><a class="do-hyeon">test 1</a></li>
                             <li><a class="do-hyeon">test 2</a></li>
                             <li><a class="do-hyeon">test 3</a></li>
                             <li><a class="do-hyeon">test 4</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
-                        <ul class="nav nav-pills pull-right">
+                    <div class="col-md-4 col-sm-12">
+                        <ul class="nav nav-pills pull-right" id="social-media">
                             <li><a class="do-hyeon"><i class="fa fa-facebook"></i></a></li>
                             <li><a class="do-hyeon"><i class="fa fa-twitter"></i></a></li>
                             <li><a class="do-hyeon"><i class="fa fa-instagram"></i></a></li>
@@ -107,7 +107,13 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" id="gallery">
+                <div class="item2">
+                    <img class="" src="img/descarga.jpeg" alt="">
+                </div>
+                <div class="item2">
+                    <img class="" src="img/descarga.jpeg" alt="">
+                </div>
                 <div class="item2">
                     <img class="" src="img/descarga.jpeg" alt="">
                 </div>
@@ -136,7 +142,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
                 </div>
             </div>
-
+            <hr>
             <div class="card">
                 <div class="card-image">
                     <img src="https://goo.gl/uLRvTh">
@@ -149,7 +155,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
                 </div>
             </div>
-
+            <hr>
             <div class="card">
                 <div class="card-image">
                     <img src="https://goo.gl/uLRvTh">
@@ -162,7 +168,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
                 </div>
             </div>
-
+            <hr>
             <div class="card">
                 <div class="card-image">
                     <img src="https://goo.gl/uLRvTh">
@@ -175,7 +181,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
                 </div>
             </div>
-
+            <hr>
             <div class="card">
                 <div class="card-image">
                     <img src="https://goo.gl/uLRvTh">
@@ -188,7 +194,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
                 </div>
             </div>
-
+            <hr>
             <div class="card">
                 <div class="card-image">
                     <img src="https://goo.gl/uLRvTh">
@@ -201,11 +207,85 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam aliquid aut beatae consectetur dignissimos dolor, ducimus eiu!</p>
                 </div>
             </div>
-
+            <hr>
         </section>
         <section class="col-md-4">
             <h3>INTRESTING</h3>
             <hr>
+            <div class="mini-card">
+                <div class="mini-card-img">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="mini-card-body">
+                    <h4 class="mini-card-title-blak">Lorem ipsum dolor ate doe </h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <br><b>09 de julio 2018</b>
+                </div>
+            </div>
+            <br>
+            <div class="mini-card">
+                <div class="mini-card-img">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="mini-card-body">
+                    <h4 class="mini-card-title-blak">Lorem ipsum dolor ate doe </h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <br><b>09 de julio 2018</b>
+                </div>
+            </div>
+            <br>
+            <div class="mini-card">
+                <div class="mini-card-img">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="mini-card-body">
+                    <h4 class="mini-card-title-blak">Lorem ipsum dolor ate doe </h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <br><b>09 de julio 2018</b>
+                </div>
+            </div>
+            <br>
+            <div class="mini-card">
+                <div class="mini-card-img">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="mini-card-body">
+                    <h4 class="mini-card-title-blak">Lorem ipsum dolor ate doe </h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <br><b>09 de julio 2018</b>
+                </div>
+            </div>
+            <br>
+            <div class="mini-card">
+                <div class="mini-card-img">
+                    <img src="https://goo.gl/uLRvTh">
+                </div>
+                <div class="mini-card-body">
+                    <h4 class="mini-card-title-blak">Lorem ipsum dolor ate doe </h4>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <br><b>09 de julio 2018</b>
+                </div>
+            </div>
+            <br>
+            <div class="card-vertical card-01">
+                <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                <div class="card-body-vertical">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur</h4>
+                    <b>09 de julio 2018</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                </div>
+            </div>
+            <br>
+            <div class="card-vertical card-01">
+                <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                <div class="card-body-vertical">
+                    <h4 class="card-title">Lorem ipsum dolor sit amet, consectetur</h4>
+                    <b>09 de julio 2018</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                    <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                </div>
+            </div>
         </section>
         <section class="col-md-12 gray-bg"><br>
             <h3 class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
@@ -277,21 +357,78 @@
                     <br><br><br>
                     <hr>
                     <div class="text-center">
-                        <span style="padding: 10px"><i class="fa fa-facebook pink-letter" aria-hidden="true"></i></span>
-                        <span style="padding: 10px"><i class="fa fa-twitter pink-letter" aria-hidden="true"></i></span>
-                        <span style="padding: 10px"><i class="fa fa-instagram pink-letter" aria-hidden="true"></i></span>
-                        <span style="padding: 10px"><i class="fa fa-github pink-letter" aria-hidden="true"></i></span>
-                        <span style="padding: 10px"><i class="fa fa-youtube pink-letter" aria-hidden="true"></i></span>
-                        <span style="padding: 10px"><i class="fa fa-pinterest pink-letter" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-facebook pink-letter fa-2x" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-twitter pink-letter fa-2x" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-instagram pink-letter fa-2x" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-github pink-letter fa-2x" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-youtube pink-letter fa-2x" aria-hidden="true"></i></span>
+                        <span style="padding: 10px"><i class="fa fa-pinterest pink-letter fa-2x" aria-hidden="true"></i></span>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <h3 class="text-center">POPULAR POST</h3>
                     <hr>
+                    <div class="mini-card">
+                        <div class="mini-card-img">
+                            <img src="https://goo.gl/uLRvTh">
+                        </div>
+                        <div class="mini-card-body">
+                            <h4 class="mini-card-title">Lorem ipsum dolor ate doe </h4>
+                            <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                            <br><b>09 de julio 2018</b>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="mini-card">
+                        <div class="mini-card-img">
+                            <img src="https://goo.gl/uLRvTh">
+                        </div>
+                        <div class="mini-card-body">
+                            <h4 class="mini-card-title">Lorem ipsum dolor ate doe </h4>
+                            <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                            <br><b>09 de julio 2018</b>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="mini-card">
+                        <div class="mini-card-img">
+                            <img src="https://goo.gl/uLRvTh">
+                        </div>
+                        <div class="mini-card-body">
+                            <h4 class="mini-card-title">Lorem ipsum dolor ate doe </h4>
+                            <span class="label pink-color border-rounded">Lorem Ipsum</span>
+                            <br><b>09 de julio 2018</b>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" id="form-footer">
                     <h3 class="text-center">NEWSLETTER</h3>
                     <hr>
+                    <input style="border-radius: 15px" type="text" class="form-control" placeholder="suscribe"><br>
+                    <input style="border-radius: 15px" type="submit" class="btn pink-color" value="suscribete">
+                    <br>
+                    <hr>
+                    <h3 class="text-center">CATEGORIES</h3>
+                    <hr>
+                    <br>
+                    <div class="col-md-6">
+                        <ul style="padding-left: 0" class="footer-menu">
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <ul style="padding-left: 0" class="footer-menu">
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                            <li class="non-list">Lorem ipsum</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <section class="col-md-12 black-two-bg">
